# TicketSystem

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Intro.md  Intro_by_assistant.md  Makefile  README.md  example.cpp  index.db  main.cpp  test.out  开发记录.md
back_end/: main.cpp
back_end/database/: BPlusTree.h  Library.h  a  map.hpp  test.cpp  ull.h  utility.hpp
back_end/libs/: Library.cpp  vector.hpp
back_end/src/: Account.cpp  Account.h  Command.cpp  Management.h  TrainSystem.cpp  TrainSystem.h
backend/libs/: FileStorage.h  Library.h  map.hpp  utility.hpp
backend/src/: Account.cpp  Account.h  Command.cpp  Command.h  Management.cpp  Management.cpp~  Management.h  TrainSystem.cpp  TrainSystem.h  main.cpp
database/: CMakeLists.txt  benchmark.cpp  example.cpp  main.cpp
database/src/buffer/: buffer_pool_manager.cpp  innodb_replacer.cpp  lru_replacer.cpp
database/src/include/buffer/: buffer_pool_manager.h  replacer.h  (+2 more)
database/src/thread/: lock_pool.cpp  thread_pool.cpp
document/: Intro_by_assistant.md  basic_runtime.txt  conclusions.md  runtime-log.txt  todo_list.md
log/: .clang-format  CMakeLists.txt
src/buffer/: buffer_pool_manager.cpp  lru_replacer.cpp
src/include/buffer/: buffer_pool_manager.h  innodb_replacer.h  lru_replacer.h
src/include/common/: config.h  exceptions.hpp  macros.h  rid.h  rwlatch.h
src/include/concurrency/: transaction.h
src/include/container/: linked_hashmap.hpp  pair.hpp  vector.hpp
src/include/thread/: thread_pool.h  thread_safe.h
src/include/type/: fixed_string.h  integer.h  mixed_string_int.h
src/storage/disk/: disk_manager.cpp  metadata_manager.cpp
src/storage/index/: b_plus_tree.cpp  b_plus_tree_index.cpp  b_plus_tree_index_nts.cpp  b_plus_tree_index_ts.cpp  b_plus_tree_nts.cpp  b_plus_tree_ts.cpp  index_iterator.cpp
src/storage/page/: b_plus_tree_internal_page.cpp  b_plus_tree_leaf_page.cpp  b_plus_tree_page.cpp  header_page.cpp  metadata_page.cpp
src/thread/: thread_pool.cpp
src/type/: mixed_string_int.cpp
test/basic/: insert_delete_find.cpp
test/concurrency/: thread_pool.cpp
(+53 files in other folders)
